Fix git version ref

--- a/.github/build-ci/manifests/intel-access-om2.spack.yaml.j2
+++ b/.github/build-ci/manifests/intel-access-om2.spack.yaml.j2
@@ -14,7 +14,7 @@ spack:
         - '@git.2023.11.09=access-om2'
     libaccessom2:
       require:
-        - '{{ ref }}=access-om2'
+        - '@git.{{ ref }}=access-om2'
     oasis3-mct:
       require:
         - '@git.2023.11.09=access-om2'
