Add gcc-runtime to manifests

--- a/.github/build-ci/manifests/intel-access-om2.spack.yaml.j2
+++ b/.github/build-ci/manifests/intel-access-om2.spack.yaml.j2
@@ -30,6 +30,9 @@ spack:
     openmpi:
       require:
         - '@4.0.2'
+    gcc-runtime:
+      require:
+      - '%gcc target={{ target }}'
     all:
       require:
         - '%{{ intel_compiler }}'
