Change view and concretizer values
Co-authored-by: Tommy Gatti <tommy.gatti@outlook.com>

--- a/.github/build-ci/manifests/intel-access-om2.spack.yaml.j2
+++ b/.github/build-ci/manifests/intel-access-om2.spack.yaml.j2
@@ -37,6 +37,6 @@ spack:
       require:
         - '%{{ intel_compiler }}'
         - 'target={{ target }}'
-  view: true
+  view: false
   concretizer:
-    unify: true
+    unify: false
